--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMN25FdcfjAAVk/JaLHfG/7",
+      "authorship_tag": "ABX9TyMy+wOQeYmq7gfBkKrGtaWl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,9 +373,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "mall_customers.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RcURGS6uwSdL",
+        "outputId": "d35f3b82-58df-40c8-8328-5be065df3fea"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(200, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RcURGS6uwSdL"
+        "id": "FLRNBZqq18d3"
       },
       "execution_count": null,
       "outputs": []
