--- a/Customer_Segmentation_using_K_Means_Clustering.ipynb
+++ b/Customer_Segmentation_using_K_Means_Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxx3JeVJbou0X/HWQn1K95",
+      "authorship_tag": "ABX9TyOMblKW058gJB6RbCS/S5C/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -741,10 +741,68 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Optimum number of cluster is 5"
+      ],
       "metadata": {
-        "id": "vPTutRBY4q7I"
+        "id": "dkLx1hHL48xo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kmeans = KMeans(n_clusters=5, init='k-means++', random_state=0)\n",
+        "\n",
+        "# Return a label for each cluster\n",
+        "Y = kmeans.fit_predict(X)\n",
+        "\n",
+        "print(Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vPTutRBY4q7I",
+        "outputId": "4efdfec3-83b5-40b0-d628-91533a57e690"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3 4 3\n",
+            " 4 3 4 3 4 3 0 3 4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 1 2 1 0 1 2 1 2 1 0 1 2 1 2 1 2 1 2 1 0 1 2 1 2 1\n",
+            " 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1 2\n",
+            " 1 2 1 2 1 2 1 2 1 2 1 2 1 2 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Visualization"
+      ],
+      "metadata": {
+        "id": "oMXX-x7o6x8f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(8,8))\n",
+        "plt.scatter(X[Y==0,0], X[Y==0,1], s=50, c='green', label='Clsuter 1')\n",
+        "plt.scatter(X[Y==1,0], X[Y==1,1], s=50, c='green', label='Clsuter 2')\n",
+        "plt.scatter(X[Y==2,0], X[Y==2,1], s=50, c='green', label='Clsuter 3')\n",
+        "plt.scatter(X[Y==3,0], X[Y==3,1], s=50, c='green', label='Clsuter 4')\n",
+        "plt.scatter(X[Y==4,0], X[Y==4,1], s=50, c='green', label='Clsuter 5')"
+      ],
+      "metadata": {
+        "id": "r6T-8oww6i_3"
       },
       "execution_count": null,
       "outputs": []
